# workflow-automation-nodes

./: .gitignore
backend/: main.py  pyproject.toml  routes.py  schema.py  service.py
frontend/: README.md  package-lock.json
frontend/src/: draggableNode.js  index.css  store.js  submit.js  toolbar.js  ui.js
frontend/src/nodes/: apiNode.js  baseNode.js  databaseNode.js  filterNode.js  inputNode.js  joinNode.js  llmNode.js  loopNode.js  outputNode.js  textNode.js
