[project]
name = "vectorshift-backend"
version = "1.0.0"
description = "VectorShift Pipeline API"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
]

[project.scripts]
dev = "uvicorn main:app --reload"
start = "uvicorn main:app"